@@ -111,7 +111,7 @@ public class StdPhaser extends StdElecWeapon
 			case CMMsg.TYP_ACTIVATE:
 				if((msg.source().location()!=null)&&(!CMath.bset(msg.targetMajor(), CMMsg.MASK_CNTRLMSG)))
 				{
-					if(msg.targetMessage().length()>0)
+					if((msg.targetMessage()!=null)&&(msg.targetMessage().length()>0))
 					{
 						List<String> V=CMParms.parse(msg.targetMessage());
 						if(V.size()>0)
@@ -129,30 +129,50 @@ public class StdPhaser extends StdElecWeapon
 				break;
 			}
 		}
+		else
+		if((owner() instanceof MOB) && msg.amISource((MOB)owner()) && (!amWearingAt(Item.IN_INVENTORY)))
+		{
+			super.executeMsg(myHost,msg);
+			switch(msg.targetMinor())
+			{
+			case CMMsg.TYP_DAMAGE:
+				if(msg.tool() ==this)
+				{
+					switch(state)
+					{
+					default:
+					case 0: {
+						if(msg.value()>0)
+							msg.setValue(1);
+						break;
+					}
+					case 1: break;
+					case 2: break;
+					}
+				}
+				break;
+			}
+		}
 		return true;
 	}
 
 	public void executeMsg(final Environmental myHost, final CMMsg msg)
 	{
-		super.executeMsg(myHost,msg);
-
 		if(msg.amITarget(this))
 		{
 			switch(msg.targetMinor())
 			{
 			case CMMsg.TYP_LOOK:
 			case CMMsg.TYP_EXAMINE:
-				if(CMLib.flags().canBeSeenBy(this, msg.source()))
-				{
-					msg.source().tell(name()+" is currently "+(activated()?("set to "+getStateName()):"deactivated")
-							+" and is at "+Math.round(powerRemaining()/powerCapacity()*100)+"% power.");
-				}
-				break;
+				super.executeMsg(myHost,msg);
+				if(CMLib.flags().canBeSeenBy(this, msg.source())&&(activated()))
+					msg.source().tell(name()+" is currently set to "+getStateName()+".");
+				return;
 			case CMMsg.TYP_ACTIVATE:
 				if((msg.source().location()!=null)&&(!CMath.bset(msg.targetMajor(), CMMsg.MASK_CNTRLMSG)))
 				{
 					int newState=state;
-					if(msg.targetMessage().length()>0)
+					if((msg.targetMessage()!=null)&&(msg.targetMessage().length()>0))
 					{
 						List<String> V=CMParms.parse(msg.targetMessage());
 						if(V.size()>0)
@@ -164,14 +184,17 @@ public class StdPhaser extends StdElecWeapon
 					}
 					state=newState;
 					msg.source().location().show(msg.source(), this, CMMsg.MSG_OK_VISUAL, "<S-NAME> set(s) <T-NAME> on "+this.getStateName()+".");
+					recoverPhyStats();
+					msg.source().recoverPhyStats();
 				}
 				this.activate(true);
-				break;
+				return;
 			}
 		}
 		else
 		if((owner() instanceof MOB) && msg.amISource((MOB)owner()) && (!amWearingAt(Item.IN_INVENTORY)))
 		{
+			super.executeMsg(myHost,msg);
 			MOB mob=(MOB)owner();
 			switch(msg.targetMinor())
 			{
@@ -194,6 +217,11 @@ public class StdPhaser extends StdElecWeapon
 								((MOB)msg.target()).basePhyStats().setDisposition(((MOB)msg.target()).basePhyStats().disposition()|PhyStats.IS_SLEEPING);
 								((MOB)msg.target()).phyStats().setDisposition(((MOB)msg.target()).phyStats().disposition()|PhyStats.IS_SLEEPING);
 							}
+							if(mob.getVictim()==msg.source())
+								mob.makePeace();
+							if(msg.source().getVictim()==mob)
+								mob.makePeace();
+							msg.setValue(0);
 						}
 						break;
 					}
@@ -211,22 +239,25 @@ public class StdPhaser extends StdElecWeapon
 							{
 								if(targ instanceof MOB)
 								{
-									if(((MOB)targ).curState().getHitPoints()>0)
-										CMLib.combat().postDamage(mob,(MOB)targ,this,(((MOB)targ).curState().getHitPoints()*100),CMMsg.MASK_ALWAYS|CMMsg.TYP_ELECTRIC,Weapon.TYPE_BURSTING,"^S<S-NAME> <DAMAGES> <T-NAME> with <O-NAME> and <T-HE-SHE> disintegrates!^?");
-									else
-									if(((MOB)targ).amDead())
-										((MOB)targ).location().show(mob,targ,CMMsg.MSG_OK_ACTION,"<T-NAME> disintegrate(s)!");
+									if((!((MOB)targ).amDead())||(((MOB)targ).curState().getHitPoints()>0))
+										CMLib.combat().postDeath(msg.source(), (MOB)targ, null);
+									((MOB)targ).location().show(mob,targ,CMMsg.MSG_OK_ACTION,"<T-NAME> disintegrate(s)!");
 									if(((MOB)targ).amDead())
 									{
+										DeadBody corpseI=null;
 										for(int i=0;i<R.numItems();i++)
 										{
 											Item I=R.getItem(i);
-											if((I!=null)&&(I instanceof DeadBody)&&(I.container()==null)&&(((DeadBody)I).savedMOB()==targ)
+											if((I!=null)
+											&&(I instanceof DeadBody)
+											&&(I.container()==null)
+											&&(((DeadBody)I).mobName().equals(targ.Name()))
 											&&(!((DeadBody)I).playerCorpse()))
-											{
-												I.destroy();
-												break;
-											}
+												corpseI=(DeadBody)I;
+										}
+										if(corpseI!=null)
+										{
+											corpseI.destroy();
 										}
 									}
 								}
@@ -248,6 +279,8 @@ public class StdPhaser extends StdElecWeapon
 			default:
 				break;
 			}
+			return;
 		}
+		super.executeMsg(myHost,msg);
 	}
 }
